cm4all-beng-proxy (0.6.22) unstable; urgency=low

  * istream-tee: clear both "enabled" flags in the eof/abort handler

 --

cm4all-beng-proxy (0.6.21) unstable; urgency=low

  * http-client: log more error messages
  * delegate-stock: added the DOCUMENT_ROOT environment variable
  * response, widget: accept "application/xhtml+xml"
  * cookie-server: allow square brackets in unquoted cookie values
    (violating RFC 2109 and RFC 2616)

 -- Max Kellermann <mk@cm4all.com>  Thu, 01 Oct 2009 13:55:40 +0200

cm4all-beng-proxy (0.6.20) unstable; urgency=low

  * stock: clear stock after 60 seconds idle
  * hstock: remove empty stocks
  * http-server, http-client, cgi: fixed off-by-one bug in header parser
  * istream-pipe: fix the direct() return value on error
  * istream-pipe: fix formula in range assertion
  * http-cache-memcached: implemented "remove"
  * handler: added FastCGI handler
  * fcgi-client: unref caller pool after socket release
  * fcgi-client: implemented response headers

 -- Max Kellermann <mk@cm4all.com>  Tue, 29 Sep 2009 14:07:13 +0200

cm4all-beng-proxy (0.6.19) unstable; urgency=low

  * http-client: release caller pool after socket release
  * memcached-client: release socket on marshalling error
  * stock: unref caller pool in abort handler
  * stock: lazy cleanup
  * http-cache: copy caller_pool to local variable

 -- Max Kellermann <mk@cm4all.com>  Thu, 24 Sep 2009 16:02:17 +0200

cm4all-beng-proxy (0.6.18) unstable; urgency=low

  * delegate-handler: support conditional GET and ranges
  * file-handler: fix suffix-byte-range-spec parser
  * delegate-helper: call open() with O_CLOEXEC|O_NOCTTY
  * istream-file: don't set FD_CLOEXEC if O_CLOEXEC is available
  * stock: hold caller pool during "get" operation
  * main: free balancer object during shutdown
  * memcached-client: enable socket timeout
  * delegate-stock: set FD_CLOEXEC on socket

 -- Max Kellermann <mk@cm4all.com>  Thu, 24 Sep 2009 10:50:53 +0200
